# bugtracker

./: README.md  manage.py  pyproject.toml
bugtracker_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bugtracker_app/migrations/: 0001_initial.py  0002_ticketmodel.py
bugtracker_app/templates/: form.html  home.html  index.html  login.html  signup.html  ticket.html  userinfo.html
bugtracker_project/: asgi.py  settings.py  urls.py  wsgi.py
