[tool.poetry]
name = "bug_tracker"
version = "0.1.0"
description = ""
authors = ["Ally35 <55605053+Ally35@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
